# CPL-majsa

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.ps1  compile.sh  public_answer.json
src/: AgariChecker.h  AngriChecker.c  AngriChecker.h  Calculator.h  YakuChecker.c  YakuChecker.h  main.c  main.h  majsa.c  majsa.h
src/lib/: AgariTilesStructureBuilder.c  AgariTilesStructureBuilder.h
src/util/: concealed.c  concealed.h  copyTileNTimes.c  copyTileNTimes.h
src/yaku/: Bakaze.c  Bakaze.h  Chinitsu.c  Chinitsu.h  Chun.c  Chun.h  Haku.c  Haku.h  Hatsu.c  Hatsu.h  Honitsu.c  Honitsu.h  Jikaze.c  Jikaze.h
test/: AgariTilesStructureTest.c
